--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=yes, maximum-scale=5">
   <meta name="description" content="Cloud Native Todo Chatbot - Chat-first interface for managing todos">
+  <meta name="theme-color" content="#6366f1">
   <title>Todo Chatbot</title>
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 </head>
